kube/dev/tap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tap-deployment
  labels:
    app: tap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tap 
  template:
    metadata:
      labels:
        app: tap
    spec:
      containers:
      - name: tap
        image: lsstdax/lsst-tap-demo:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: google-creds
          mountPath: "/etc/creds"
          readOnly: true
      volumes:
      - name: google-creds
        secret:
          secretName: google-creds
