kube/dev/tap-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tap-service
spec:
  selector:
    app: tap
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
